fix incorrect namespaces

--- a/k8s/certmanager/kustomization.yaml
+++ b/k8s/certmanager/kustomization.yaml
@@ -4,3 +4,5 @@ resources:
   - resources/render
   - resources/prod-clusterissuer.yaml
   - resources/staging-clusterissuer.yaml
+
+namespace: cert-manager
