feat: update clusterissuer

--- a/k8s/certmanager/resources/prod-clusterissuer.yaml
+++ b/k8s/certmanager/resources/prod-clusterissuer.yaml
@@ -15,4 +15,5 @@ spec:
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
       - http01:
-          ingress: {}
+          ingress:
+            name: traefik
