--- a/k8s/traefik/resources/render/kustomization.yaml
+++ b/k8s/traefik/resources/render/kustomization.yaml
@@ -9,6 +9,13 @@ resources:
 - serverstransports.traefik.containo.us-CustomResourceDefinition.yml
 - tlsoptions.traefik.containo.us-CustomResourceDefinition.yml
 - tlsstores.traefik.containo.us-CustomResourceDefinition.yml
+- traefik-Deployment.yml
+- traefik-IngressClass.yml
+- traefik-Service.yml
+- traefik-ServiceAccount.yml
+- traefik-dashboard-IngressRoute.yml
 - traefik-ingress-controller-ClusterRole.yml
 - traefik-ingress-controller-ClusterRoleBinding.yml
+- traefik-traefik-ClusterRole.yml
+- traefik-traefik-ClusterRoleBinding.yml
 - traefikservices.traefik.containo.us-CustomResourceDefinition.yml
