--- a/k8s/certmanager/resources/render/cert-manager-Deployment.yml
+++ b/k8s/certmanager/resources/render/cert-manager-Deployment.yml
@@ -28,8 +28,8 @@ spec:
         app.kubernetes.io/version: "v1.10.1"
       annotations:
         prometheus.io/path: "/metrics"
-        prometheus.io/scrape: 'true'
-        prometheus.io/port: '9402'
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "9402"
     spec:
       serviceAccountName: cert-manager
       securityContext:
@@ -43,7 +43,7 @@ spec:
           args:
             - --v=2
             - --cluster-resource-namespace=$(POD_NAMESPACE)
-            - --leader-election-namespace=kube-system
+            - --leader-election-namespace=cert-manager
           ports:
             - containerPort: 9402
               name: http-metrics
