--- a/k8s/certmanager/resources/staging-clusterissuer.yaml
+++ b/k8s/certmanager/resources/staging-clusterissuer.yaml
@@ -15,5 +15,4 @@ spec:
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
       - http01:
-          ingress:
-            name: traefik
+          ingress: {}
