refactor: remove azure specific files (WIP)
feat: added service account to renovate

--- a/k8s/renovate/kustomization.yaml
+++ b/k8s/renovate/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - resources/cronjob.yaml
   - resources/ns.yaml
+  - resources/sa.yaml
   - secrets/renovate-external-secret.yaml
 
 configMapGenerator:
