--- a/k8s/tekline/resources/tasks/create-namespace-task/kustomization.yaml
+++ b/k8s/tekline/resources/tasks/create-namespace-task/kustomization.yaml
@@ -6,5 +6,4 @@ resources:
 configMapGenerator:
   - name: create-namespace-scripts
     files:
-      - kaniko-azureidentity.yaml
-      - kaniko-azureidentitybinding.yaml
+      - sa.yaml
