--- a/k8s/tekline/resources/tasks/create-namespace-task/create-namespace-task.yaml
+++ b/k8s/tekline/resources/tasks/create-namespace-task/create-namespace-task.yaml
@@ -18,6 +18,8 @@ spec:
       volumeMounts:
         - name: scripts
           mountPath: /scripts
+        - name: resources
+          mountPath: /resources
       script: |
         #!/bin/bash
         set -euo pipefail
@@ -59,9 +61,9 @@ spec:
         kubectl get sa tekline -n ${namespace} || kubectl apply -n ${namespace} -f scripts/sa.yaml
 
         # Apply additional resources if required. 
-        if [ -n "$(ls -A resources/ 2>/dev/null)" ]
+        if [ -n "$(ls -A /resources/ 2>/dev/null)" ]
         then
-          kubectl apply -n ${namespace} -f resources/*
+          kubectl apply -n ${namespace} -f /resources/*
         fi
 
         kubectl get rolebinding -n ${namespace} tekline-edit || \
