add thanos support

--- a/k8s/monitoring/kustomization.yaml
+++ b/k8s/monitoring/kustomization.yaml
@@ -3,23 +3,21 @@ kind: Kustomization
 resources:
   - resources/render
   - resources/ns.yaml
-
 namespace: monitoring
-
 patches:
   - target:
       kind: Alertmanager
     path: patches/single-replica.yaml
-
   - target:
       kind: Prometheus
     path: patches/single-replica.yaml
-
   - target:
       kind: Prometheus
     path: patches/prometheus-thanos.yaml
-
   - target:
       kind: ClusterRoleBinding
       name: prometheus
     path: patches/prometheus-cluster-role-binding-sa.yaml
+images:
+  - name: quay.io/thanos/thanos
+    newTag: v0.30.2
