--- a/k8s/tekline/resources/github-eventlistener.yaml
+++ b/k8s/tekline/resources/github-eventlistener.yaml
@@ -9,6 +9,7 @@ spec:
       interceptors:
         - ref:
             name: "cel"
+            kind: ClusterInterceptor
           params:
             - name: "secretRef"
               value:
