fix new pipelinerun spec

--- a/k8s/tekline/resources/github-triggertemplate.yaml
+++ b/k8s/tekline/resources/github-triggertemplate.yaml
@@ -15,13 +15,14 @@ spec:
         generateName: github-run-
         namespace: tekline
       spec:
-        serviceAccountName: delegate-pipeline
-        podTemplate:
-          securityContext:
-            runAsNonRoot: true
-            runAsUser: 1000
-            runAsGroup: 1000
-            fsGroup: 1000
+        taskRunSpecs:
+          serviceAccountName: delegate-pipeline
+          podTemplate:
+            securityContext:
+              runAsNonRoot: true
+              runAsUser: 1000
+              runAsGroup: 1000
+              fsGroup: 1000
         pipelineRef:
           name: delegate-pipeline
         params:
