fix issue wit tekton api version

--- a/k8s/tekline/resources/github-triggertemplate.yaml
+++ b/k8s/tekline/resources/github-triggertemplate.yaml
@@ -15,7 +15,7 @@ spec:
         generateName: github-run-
         namespace: tekline
       spec:
-        taskRunSpecs:
+        taskRunTemplate:
           serviceAccountName: delegate-pipeline
           podTemplate:
             securityContext:
