--- a/k8s/argocd/resources/render/argocd-application-controller-StatefulSet.yml
+++ b/k8s/argocd/resources/render/argocd-application-controller-StatefulSet.yml
@@ -34,8 +34,8 @@ spec:
                 topologyKey: kubernetes.io/hostname
               weight: 5
       containers:
-        - command:
-            - argocd-application-controller
+        - args:
+            - /usr/local/bin/argocd-application-controller
           env:
             - name: ARGOCD_CONTROLLER_REPLICAS
               value: "1"
@@ -159,7 +159,13 @@ spec:
                   key: application.namespaces
                   name: argocd-cmd-params-cm
                   optional: true
-          image: quay.io/argoproj/argocd:v2.6.7
+            - name: ARGOCD_APPLICATION_CONTROLLER_KUBECTL_PARALLELISM_LIMIT
+              valueFrom:
+                configMapKeyRef:
+                  key: controller.kubectl.parallelism.limit
+                  name: argocd-cmd-params-cm
+                  optional: true
+          image: quay.io/argoproj/argocd:v2.7.6
           imagePullPolicy: Always
           name: argocd-application-controller
           ports:
