--- a/k8s/argocd/resources/render/argocd-applicationset-controller-Deployment.yml
+++ b/k8s/argocd/resources/render/argocd-applicationset-controller-Deployment.yml
@@ -3,9 +3,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.kubernetes.io/component: controller
+    app.kubernetes.io/component: applicationset-controller
     app.kubernetes.io/name: argocd-applicationset-controller
-    app.kubernetes.io/part-of: argocd-applicationset
+    app.kubernetes.io/part-of: argocd
   name: argocd-applicationset-controller
 spec:
   selector:
@@ -17,9 +17,8 @@ spec:
         app.kubernetes.io/name: argocd-applicationset-controller
     spec:
       containers:
-        - command:
-            - entrypoint.sh
-            - argocd-applicationset-controller
+        - args:
+            - /usr/local/bin/argocd-applicationset-controller
           env:
             - name: NAMESPACE
               valueFrom:
@@ -85,7 +84,7 @@ spec:
                   key: applicationsetcontroller.enable.progressive.syncs
                   name: argocd-cmd-params-cm
                   optional: true
-          image: quay.io/argoproj/argocd:v2.6.7
+          image: quay.io/argoproj/argocd:v2.7.6
           imagePullPolicy: Always
           name: argocd-applicationset-controller
           ports:
