--- a/k8s/argocd/resources/render/argocd-applicationset-controller-Role.yml
+++ b/k8s/argocd/resources/render/argocd-applicationset-controller-Role.yml
@@ -3,9 +3,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
-    app.kubernetes.io/component: controller
+    app.kubernetes.io/component: applicationset-controller
     app.kubernetes.io/name: argocd-applicationset-controller
-    app.kubernetes.io/part-of: argocd-applicationset
+    app.kubernetes.io/part-of: argocd
   name: argocd-applicationset-controller
 rules:
   - apiGroups:
