--- a/k8s/argocd/resources/render/argocd-dex-server-Deployment.yml
+++ b/k8s/argocd/resources/render/argocd-dex-server-Deployment.yml
@@ -36,7 +36,7 @@ spec:
                   key: dexserver.disable.tls
                   name: argocd-cmd-params-cm
                   optional: true
-          image: ghcr.io/dexidp/dex:v2.35.3
+          image: ghcr.io/dexidp/dex:v2.36.0
           imagePullPolicy: Always
           name: dex
           ports:
@@ -61,11 +61,11 @@ spec:
               name: argocd-dex-server-tls
       initContainers:
         - command:
-            - cp
+            - /bin/cp
             - -n
             - /usr/local/bin/argocd
             - /shared/argocd-dex
-          image: quay.io/argoproj/argocd:v2.6.7
+          image: quay.io/argoproj/argocd:v2.7.6
           imagePullPolicy: Always
           name: copyutil
           securityContext:
