--- a/k8s/argocd/resources/render/argocd-server-Deployment.yml
+++ b/k8s/argocd/resources/render/argocd-server-Deployment.yml
@@ -32,8 +32,8 @@ spec:
                 topologyKey: kubernetes.io/hostname
               weight: 5
       containers:
-        - command:
-            - argocd-server
+        - args:
+            - /usr/local/bin/argocd-server
           env:
             - name: ARGOCD_SERVER_INSECURE
               valueFrom:
@@ -227,7 +227,7 @@ spec:
                   key: server.enable.proxy.extension
                   name: argocd-cmd-params-cm
                   optional: true
-          image: quay.io/argoproj/argocd:v2.6.7
+          image: quay.io/argoproj/argocd:v2.7.6
           imagePullPolicy: Always
           livenessProbe:
             httpGet:
