feat: updated argocd

--- a/k8s/argocd/patches/deployment.yaml
+++ b/k8s/argocd/patches/deployment.yaml
@@ -1,4 +1,3 @@
 - op: add
-  path: /spec/template/spec/containers/1/args
-  value:
-    - --insecure
+  path: /spec/template/spec/containers/0/args/-
+  value: --insecure
