--- a/k8s/traefik/resources/render/traefik-traefik-ClusterRole.yml
+++ b/k8s/traefik/resources/render/traefik-traefik-ClusterRole.yml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app.kubernetes.io/name: traefik
     app.kubernetes.io/instance: traefik-traefik
-    helm.sh/chart: traefik-22.1.0
+    helm.sh/chart: traefik-23.1.0
     app.kubernetes.io/managed-by: Helm
 rules:
   - apiGroups:
@@ -38,6 +38,7 @@ rules:
     verbs:
       - update
   - apiGroups:
+      - traefik.io
       - traefik.containo.us
     resources:
       - ingressroutes
