--- a/k8s/tekton/resources/render/tekton-operator-ClusterRole.yml
+++ b/k8s/tekton/resources/render/tekton-operator-ClusterRole.yml
@@ -25,6 +25,7 @@ rules:
       - list
       - update
       - watch
+      - describe
   - apiGroups:
       - extensions
       - apps
@@ -93,6 +94,8 @@ rules:
       - create
       - update
       - delete
+      - list
+      - watch
   - apiGroups:
       - ""
     resources:
@@ -116,6 +119,8 @@ rules:
       - create
       - update
       - delete
+      - list
+      - watch
   - apiGroups:
       - apiextensions.k8s.io
     resources:
@@ -180,16 +185,6 @@ rules:
       - delete
       - patch
       - watch
-  - apiGroups:
-      - policy
-    resources:
-      - podsecuritypolicies
-    verbs:
-      - get
-      - create
-      - update
-      - delete
-      - use
   - apiGroups:
       - operator.tekton.dev
     resources:
