--- a/k8s/monitoring/resources/render/thanos/thanos-store-statefulSet.yaml
+++ b/k8s/monitoring/resources/render/thanos/thanos-store-statefulSet.yaml
@@ -45,7 +45,7 @@ spec:
       containers:
       - args:
         - store
-        - --log.level=debug
+        - --log.level=info
         - --log.format=logfmt
         - --data-dir=/var/thanos/store
         - --grpc-address=0.0.0.0:10901
