feat: add prometheus operator

--- a/k8s/prometheus-operator/resources/render/kustomization.yaml
+++ b/k8s/prometheus-operator/resources/render/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 - monitoring.coreos.com_prometheusagents.yaml
 - monitoring.coreos.com_prometheuses.yaml
 - monitoring.coreos.com_prometheusrules.yaml
+- monitoring.coreos.com_scrapeconfigs.yaml
 - monitoring.coreos.com_servicemonitors.yaml
 - monitoring.coreos.com_thanosrulers.yaml
 - prometheus-operator-cluster-role-binding.yaml
