--- a/k8s/monitoring/kustomization.yaml
+++ b/k8s/monitoring/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - resources/render
+  - resources/ns.yaml
+  - resources/thanos-sa.yaml
 namespace: monitoring
 patches:
   - target:
