--- a/k8s/dashboarding/resources/render/grafana-operator-grafana-Grafana.yml
+++ b/k8s/dashboarding/resources/render/grafana-operator-grafana-Grafana.yml
@@ -1,97 +1,57 @@
 ---
 # Source: grafana-operator/templates/grafana.yaml
-apiVersion: integreatly.org/v1alpha1
+apiVersion: grafana.integreatly.org/v1beta1
 kind: Grafana
 metadata:
   name: grafana-operator-grafana
   namespace: "grafana"
   labels:
     app.kubernetes.io/name: grafana-operator
-    helm.sh/chart: grafana-operator-2.9.3
+    helm.sh/chart: grafana-operator-3.0.0
     app.kubernetes.io/instance: grafana-operator
     app.kubernetes.io/managed-by: Helm
 spec:
-  baseImage: docker.io/bitnami/grafana:9.5.2-debian-11-r6
   client:
     timeout: 5
-    preferService: true
   service:
-    labels:
-      app.kubernetes.io/name: grafana-operator
-      helm.sh/chart: grafana-operator-2.9.3
-      app.kubernetes.io/instance: grafana-operator
-      app.kubernetes.io/managed-by: Helm
-    type: ClusterIP
-  livenessProbeSpec:
-    initialDelaySeconds: 120
-    periodSeconds: 10
-    timeoutSeconds: 5
-    successThreshold: 1
-    failureThreshold: 6
-  readinessProbeSpec:
-    initialDelaySeconds: 30
-    periodSeconds: 10
-    timeoutSeconds: 5
-    successThreshold: 1
-    failureThreshold: 6
+    spec:
+      type: ClusterIP
   deployment:
-    labels:
-      app.kubernetes.io/name: grafana-operator
-      helm.sh/chart: grafana-operator-2.9.3
-      app.kubernetes.io/instance: grafana-operator
-      app.kubernetes.io/managed-by: Helm
-    replicas: 1
-    skipCreateAdminAccount: false
-    securityContext:
-      fsGroup: 1001
-      runAsGroup: 0
-      runAsNonRoot: true
-      runAsUser: 1001
-      supplementalGroups: []
-    containerSecurityContext:
-      allowPrivilegeEscalation: false
-      privileged: false
-      runAsGroup: 0
-      runAsNonRoot: true
-      runAsUser: 1001
-    affinity:
-      podAntiAffinity:
-        preferredDuringSchedulingIgnoredDuringExecution:
-          - podAffinityTerm:
-              labelSelector:
-                matchLabels:
-                  app.kubernetes.io/name: grafana-operator
-                  app.kubernetes.io/instance: grafana-operator
-                  app.kubernetes.io/component: grafana
-              topologyKey: kubernetes.io/hostname
-            weight: 1
-  resources:
-    limits: {}
-    requests: {}
-  ingress:
-    enabled: false
-    hostname: grafana.local
-    tlsEnabled: false
-    tlsSecretName: grafana.local-tls
-    path: /
-    pathType: ImplementationSpecific
+    spec:
+      replicas: 1
+      template:
+        spec:
+          affinity:
+            podAntiAffinity:
+              preferredDuringSchedulingIgnoredDuringExecution:
+                - podAffinityTerm:
+                    labelSelector:
+                      matchLabels:
+                        app.kubernetes.io/name: grafana-operator
+                        app.kubernetes.io/instance: grafana-operator
+                        app.kubernetes.io/component: grafana
+                    topologyKey: kubernetes.io/hostname
+                  weight: 1
+          securityContext:
+            fsGroup: 1001
+            runAsGroup: 0
+            runAsNonRoot: true
+            runAsUser: 1001
+            supplementalGroups: []
   config:
-    alerting:
-      enabled: false
     analytics:
-      check_for_updates: false
-      reporting_enabled: false
+      check_for_updates: "false"
+      reporting_enabled: "false"
+    database:
+      wal: "true"
     log:
       level: warn
       mode: console
     security:
-      disable_gravatar: false
+      disable_gravatar: "false"
     server:
       root_url: |-
         http://localhost:3000
-  dashboardLabelSelector:
-    - matchLabels:
-        app.kubernetes.io/instance: 'grafana-operator'
   jsonnet:
     libraryLabelSelector:
       matchLabels:
