--- a/k8s/dashboarding/resources/render/kustomization.yaml
+++ b/k8s/dashboarding/resources/render/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- grafana-operator-grafana-ClusterRole.yml
+- grafana-operator-grafana-ClusterRoleBinding.yml
 - grafana-operator-grafana-Grafana.yml
