--- a/k8s/grafana-operator/resources/render/grafana-operator-permissions-ClusterRoleBinding.yml
+++ b/k8s/grafana-operator/resources/render/grafana-operator-permissions-ClusterRoleBinding.yml
@@ -2,12 +2,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: traefik-ingress-controller
+  name: grafana-operator-permissions
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: traefik-ingress-controller
+  name: grafana-operator-permissions
 subjects:
   - kind: ServiceAccount
-    name: traefik-ingress-controller
-    namespace: default
+    name: grafana-operator-controller-manager
+    namespace: grafana
