--- a/k8s/grafana-operator/kustomization.yaml
+++ b/k8s/grafana-operator/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - resources/render
-  - resources/ns.yaml
+  # - resources/ns.yaml
 
 namespace: grafana-operator
