--- a/k8s/dashboarding/kustomization.yaml
+++ b/k8s/dashboarding/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - resources/render
+  # - resources/render
   - resources/datasource.yaml
 
-namespace: grafana-operator #stupid missing feature in Operator
+namespace: dashboarding
