--- a/k8s/dashboarding/resources/datasource.yaml
+++ b/k8s/dashboarding/resources/datasource.yaml
@@ -1,9 +1,12 @@
-apiVersion: integreatly.org/v1alpha1
-kind: GrafanaDataSource
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDatasource
 metadata:
-  name: grafanadatasource
+  name: prometheus
 spec:
-  name: middleware.yaml
+  allowCrossNamespaceImport: true
+  instanceSelector:
+    matchLabels:
+      dashboards: "grafana"
   datasources:
     - name: Prometheus
       type: prometheus
