test with grafana instnace

--- a/k8s/tekline/secrets/github-trigger-external-secret.yaml
+++ b/k8s/tekline/secrets/github-trigger-external-secret.yaml
@@ -13,7 +13,6 @@ spec:
     creationPolicy: Owner
 
   data:
-    # name of the SECRET in the Azure KV (no prefix is by default a SECRET)
     - secretKey: secretToken
       remoteRef:
-        key: github-trigger-secret
+        key: github-trigger-secret # name is secret store (AWS secrets manager or Azure Key Vault)
