--- a/k8s/dashboarding/kustomization.yaml
+++ b/k8s/dashboarding/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # - resources/render
+  - resources/grafana.yaml
   - resources/datasource.yaml
+  - secrets/grafana.yaml
 
 namespace: dashboarding
