feat: add namespace

--- a/k8s/dashboarding/kustomization.yaml
+++ b/k8s/dashboarding/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   # - resources/render
   - resources/grafana.yaml
   - resources/datasource.yaml
+  - resources/ns.yaml
   - secrets/grafana.yaml
 
 namespace: dashboarding
