feat: add ingress

--- a/k8s/dashboarding/kustomization.yaml
+++ b/k8s/dashboarding/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
   - resources/datasource.yaml
   - resources/grafana.yaml
   - resources/ns.yaml
+  - resources/ingress.yaml
 
 namespace: dashboarding
