fix: kind for override thanos query

--- a/k8s/monitoring/kustomization.yaml
+++ b/k8s/monitoring/kustomization.yaml
@@ -21,7 +21,7 @@ patches:
     path: patches/prometheus-cluster-role-binding-sa.yaml
 
   - target:
-      kind: StatefulSet
+      kind: Deployment
       name: thanos-query
     path: patches/thanos-query-prometheus-discovery.yaml
 images:
