--- a/k8s/monitoring/patches/thanos-query-prometheus-discovery.yaml
+++ b/k8s/monitoring/patches/thanos-query-prometheus-discovery.yaml
@@ -1,3 +1,3 @@
 - op: add
   path: /spec/template/spec/containers/0/args/-
-  value: --store=dnssrv+_web._tcp.prometheus-k8s.monitoring.svc.cluster.local
+  value: --store=dnssrv+_grpc._tcp.prometheus-operated.monitoring.svc.cluster.local
