--- a/k8s/dashboarding/resources/datasource-thanos.yaml
+++ b/k8s/dashboarding/resources/datasource-thanos.yaml
@@ -1,18 +1,18 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDatasource
 metadata:
-  name: prometheus
+  name: thanos-query
 spec:
   allowCrossNamespaceImport: true
   instanceSelector:
     matchLabels:
       dashboards: "grafana"
   datasource:
-    name: Prometheus
-    type: prometheus
+    name: "Thanos Query"
+    type: Prometheus
     access: proxy
-    url: http://prometheus-operated.monitoring.svc.cluster.local:9090
-    isDefault: false
+    url: http://thanos-query.monitoring.svc.cluster.local:9090
+    isDefault: true
     editable: false
     jsonData:
       tlsSkipVerify: true
