--- a/k8s/dashboarding/resources/datasource.yaml
+++ b/k8s/dashboarding/resources/datasource.yaml
@@ -11,7 +11,7 @@ spec:
     name: Prometheus
     type: prometheus
     access: proxy
-    url: http://prometheus-operated.monitoring.svc.cluster.local:9090
+    url: http://thanos-query.monitoring.svc.cluster.local:9090
     isDefault: false
     editable: false
     jsonData:
