--- a/k8s/dashboarding/resources/datasource-thanos.yaml
+++ b/k8s/dashboarding/resources/datasource-thanos.yaml
@@ -9,7 +9,7 @@ spec:
       dashboards: "grafana"
   datasource:
     name: "Thanos Query"
-    type: Prometheus
+    type: prometheus
     access: proxy
     url: http://thanos-query.monitoring.svc.cluster.local:9090
     isDefault: true
