--- a/k8s/dashboarding/resources/datasource.yaml
+++ b/k8s/dashboarding/resources/datasource.yaml
@@ -8,7 +8,7 @@ spec:
     matchLabels:
       dashboards: "grafana"
   datasource:
-    name: thanos
+    name: "Thanos Query"
     type: prometheus
     access: proxy
     url: http://thanos-query.monitoring.svc.cluster.local:9090
