--- a/k8s/dashboarding/resources/datasource.yaml
+++ b/k8s/dashboarding/resources/datasource.yaml
@@ -12,7 +12,7 @@ spec:
     type: prometheus
     access: proxy
     url: http://thanos-query.monitoring.svc.cluster.local:9090
-    isDefault: false
+    isDefault: true
     editable: false
     jsonData:
       tlsSkipVerify: true
