feat: add kibana and filebeat to deployment

--- a/k8s/logging/kustomization.yaml
+++ b/k8s/logging/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - resources/elasticsearch.yaml
+  - resources/kibana.yaml
+  - resources/filebeat.yaml
   - resources/ns.yaml
 namespace: logging
