--- a/k8s/argocd/resources/render/argocd-notifications-controller-Deployment.yml
+++ b/k8s/argocd/resources/render/argocd-notifications-controller-Deployment.yml
@@ -34,7 +34,13 @@ spec:
                   key: notificationscontroller.log.level
                   name: argocd-cmd-params-cm
                   optional: true
-          image: quay.io/argoproj/argocd:v2.8.4
+            - name: ARGOCD_APPLICATION_NAMESPACES
+              valueFrom:
+                configMapKeyRef:
+                  key: application.namespaces
+                  name: argocd-cmd-params-cm
+                  optional: true
+          image: quay.io/argoproj/argocd:v2.9.2
           imagePullPolicy: Always
           livenessProbe:
             tcpSocket:
