--- a/k8s/argocd/resources/render/argocd-dex-server-Service.yml
+++ b/k8s/argocd/resources/render/argocd-dex-server-Service.yml
@@ -9,7 +9,8 @@ metadata:
   name: argocd-dex-server
 spec:
   ports:
-    - name: http
+    - appProtocol: TCP
+      name: http
       port: 5556
       protocol: TCP
       targetPort: 5556
