--- a/k8s/tekton/resources/render/tekton-operator-ClusterRole.yml
+++ b/k8s/tekton/resources/render/tekton-operator-ClusterRole.yml
@@ -7,6 +7,12 @@ rules:
   - apiGroups:
       - ""
     resources:
+      - nodes
+    verbs:
+      - list
+  - apiGroups:
+      - ""
+    resources:
       - pods
       - services
       - endpoints
