fix: secret store naming

--- a/k8s/renovate/secrets/renovate-external-secret.yaml
+++ b/k8s/renovate/secrets/renovate-external-secret.yaml
@@ -7,7 +7,7 @@ spec:
   refreshInterval: 1m
   secretStoreRef:
     kind: ClusterSecretStore
-    name: renovate-talk-secret-store
+    name: secret-store
 
   target:
     name: renovate-env
